--- a/derrmru-react-app/package.json
+++ b/derrmru-react-app/package.json
@@ -3,9 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -16,7 +13,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "node ./scripts/build-non-split.js",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -38,6 +35,17 @@
     ]
   },
   "devDependencies": {
-    "@types/jquery": "^3.5.5"
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^27.0.1",
+    "@types/jquery": "^3.5.5",
+    "babel-jest": "^27.1.1",
+    "jest": "^27.1.1",
+    "react-test-renderer": "^17.0.2"
   }
 }
